# ytmus

./: CMakeLists.txt  Makefile  README.md  config.ini  controller.cpp  controller.hpp  main.cpp  midi_key.txt  midictl.cpp  midictl.hpp  midihandler.cpp  midihandler.hpp  oschandler.cpp  oschandler.hpp  player.cpp  player.hpp  tui.cpp  tui.hpp  types.hpp  vids.txt
